Make use of modern Java stuff, improve Java 16 compat